--- a/Introduction/Makefile
+++ b/Introduction/Makefile
@@ -1,18 +1,37 @@
 ##
 ## Makefile for  in /home/earvin/Lab/BattleForMidgard/Introduction
-## 
+##
 ## Made by KAYONGA Earvin
 ## Login   <kayong_e@etna-alternance.net>
 ## 
 ## Started on  Mon Dec 14 15:52:54 2015 KAYONGA Earvin
-## Last update Mon Dec 14 16:15:19 2015 KAYONGA Earvin
+## Last update Mon Dec 14 16:46:49 2015 KAYONGA Earvin
 ##
 CC 	=	gcc
 CFLAGS 	= 	-W -Wall -Werror
 NAME 	=	sta
 RM 	=	rm -f
-SRC 	=	main.c\
-		../utils/*
+SRC 	=	../utils/getCreature.c		\
+		../utils/my_putchar.c		\
+		../utils/my_strcmp.c		\
+		../utils/my_strncat.c		\
+		../utils/my_strstr.c		\
+		../utils/isalphanum.c		\
+		../utils/my_put_nbr.c		\
+		../utils/my_strcpy.c		\
+		../utils/my_strncmp.c		\
+		../utils/my_str_to_wordtab.c	\
+		../utils/my_getnbr.c		\
+		../utils/my_putstr.c		\
+		../utils/my_strdup.c		\
+		../utils/my_strncpy.c		\
+		../utils/my_swap.c		\
+		../utils/my_isneg.c		\
+		../utils/my_strcat.c		\
+		../utils/my_strlen.c		\
+		../utils/my_strndup.c		\
+		../utils/readline.c		\
+		main.c
 
 OBJ	=	$(SRC:%.c=%.o)
 
