--- a/Introduction/Makefile
+++ b/Introduction/Makefile
@@ -5,7 +5,7 @@
 ## Login   <kayong_e@etna-alternance.net>
 ## 
 ## Started on  Mon Dec 14 15:52:54 2015 KAYONGA Earvin
-## Last update Tue Dec 15 12:12:07 2015 KAYONGA Earvin
+## Last update Tue Dec 15 22:48:29 2015 KAYONGA Earvin
 ##
 CC 	=	gcc
 CFLAGS 	= 	-W -Wall -Werror -Wextra
@@ -31,7 +31,9 @@ SRC 	=	../utils/getCreature.c		\
 		../utils/my_strlen.c		\
 		../utils/my_strndup.c		\
 		../utils/readline.c		\
+		rand.c				\
 		my_putstrN.c			\
+		capture.c			\
 		battle.c			\
 		mem.c				\
 		setting.c			\
